updated text and images and margins

--- a/index.html
+++ b/index.html
@@ -57,15 +57,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img src="aboutme.png">
-          <p class="lead text-right">A paragraph about me</p>
+          <img src="aboutme.png" style="margin:50px 0px">
+          <p class="lead text-left">Thanks for stopping by.  I grew up in southeastern Michigan and attended Oakland University where I earned a degree in Studio Art with a concentration in New Media.  I recently relocated back to Michigan after six years living in Los Angeles managing fundraising campaigns for LA Phil and LA Opera. Part of that decision was based on my desire to get into the tech industry. I enrolled in the Grand Circus Java Developer Bootcamp and got the ball rolling on this new chapter of my life.</p>
+          <p class="lead text-left">In my free time, I am an avid outdoorsman.  Hiking and camping are major passions of mine.  I am also a near lifetime regular at whatever opera company happens to be nearest to me.  I began attending at the age of eight!  I also have been collecting Roman Imperial Coinage for the last few years and own a nearly full representation of coins spanning almost 500 years of history.  Ask me about them, I’d love to show them to you.</p>
           <p class="lead text-right"></p>
-          <p class="lead text-right">thing</p>
-          <p class="lead text-right">thing</p>
-          <p class="lead text-right">thing</p>
-          <p class="lead text-right">thing</p>
-          <p class="lead text-right">thing</p>
-        </div>
+          <p class="lead text-right"><a href="https://www.linkedin.com/in/thomas-rowland-93446b1a9/">LinkedIn</a></p>
+          <p class="lead text-right"><a href="https://github.com/thomasjrowland">GitHub</a></p>
+         </div>
       </div>
     </div>
   </section>
@@ -74,8 +72,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img src="mywork.png">
-          <p class="lead">Portfolio goes here links to github, etc.</p>
+          <img src="mywork.png" style="margin:50px 0px">
+          	<p class="">
+			<img src="trufflehunter2000.png" href="https://github.com/thomasjrowland/TruffleHunter" style="float:left;width:270px;height:200px;margin:0px 50px">
+				<a href="https://github.com/thomasjrowland/TruffleHunter">Truffle Hunter 2000</a> a minesweeper clone created while at Grand Circus Detroit.  
+			</p>
         </div>
       </div>
     </div>
