added another item to portfolio, updated images

--- a/index.html
+++ b/index.html
@@ -74,8 +74,13 @@
         <div class="col-lg-8 mx-auto">
           <img src="mywork.png" style="margin:50px 0px">
           	<p class="">
-			<img src="trufflehunter2000.png" href="https://github.com/thomasjrowland/TruffleHunter" style="float:left;width:270px;height:200px;margin:0px 50px">
+			<img src="trufflehunter2000.png" href="https://github.com/thomasjrowland/TruffleHunter" style="float:left;width:381px;height:331px;margin:0px 50px">
 				<a href="https://github.com/thomasjrowland/TruffleHunter">Truffle Hunter 2000</a> a minesweeper clone created while at Grand Circus Detroit.  
+			</p>
+			<p style="margin:375px 0px"></p>
+			<p class="">
+			<img src="piglatin.png" href="https://github.com/thomasjrowland/TruffleHunter" style="float:right;width:381px;height:331px;margin:0px 50px">
+				<a href="https://github.com/thomasjrowland/Rowland-Capstone-One">Pig Latin Translator</a> Away untionalfay Igpay Atinlay anslatortray orfay ethay Avajay onsolecay.  
 			</p>
         </div>
       </div>
